@@ -45,6 +45,8 @@
             Add JSVAR_FORCE_16_BYTE to allow experimental_compact_vars changes to be removed
             Add JSVAR_FORCE_INLINE, and don't force lock/unlock/getters to be inlined.
               Compiler has improved enough we save 10% code space and get marginally faster
+            Add ArrayBufferView.subarray for easily making subarrays (eg a.set(a.subarray(-1)))
+            Solve case where an ArrayBuffer set using the same array could duplicate entries (`a.set(a.subarray(),1)`)
 
      2v09 : Bangle.js: increase default advertising interval from 375 to 200ms to ease connections
             Fix Math.acos for negative values (fix #1950)
